# OpenGL-Sandbox-Game

./: .cpproj.json  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  results.json
Assets/: MapTest.vs
Assets/Images/: Map2.psd
Assets/Images/Characters/: Character.psd  Character1.psd  Character2.psd  Character3.psd  Character4.psd  Character5.psd  Character6.psd  silhouette.psd
Assets/Shaders/Characters/: Default.fs  Default.vs
Assets/Shaders/Composition/: Composition.fs  Composition.vs
Assets/Shaders/Debug/: Line.fs  Line.vs
Assets/Shaders/Default/: Default.fs  Default.vs
Assets/Shaders/Terrain/: Chunk.fs  Chunk.vs  ColorPassShader.fs  ColorPassShader.vs  Composition.fs  Composition.vs  CompositionShader.fs  CompositionShader.vs  Default.fs  Default.vs  FSUnlitShader.glsl  Light.dyn.vs  Light.vs  Light1.vs  LightPass.fs  LightPass.vs  LightPassShader.fs  LightPassShader.vs  VSUnlitShader.glsl
Assets/Shaders/Terrain_Old/: Chunk.fs  Default.fs  Default.vs  Light.fs
Assets/Shaders/Woods/: VS_Woods.glsl
Source/: Instrumentor.h  Main.cpp  Pch.h
Source/Assets/: Asset.h  ImageAsset.cpp  ImageAsset.h  TextAsset.cpp  TextAsset.h
Source/Core/: Engine.cpp  Engine.h  Gui.cpp  Gui.h  Time.h  Window.cpp  Window.h
Source/Core/Input/: Input.cpp  Input.h  Keys.h  State.h
Source/Core/Themes/: Theme0.h
Source/GPU/: Common.h  FBO.cpp  FBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.h  VBO.h
Source/GPU1/: FBO.h  Shader.h  VBO.h
Source/Game/: Block.h  BlockType.h  Blocks.h  Character.cpp  Character.h  Chunk.cpp  Chunk.h  Game.cpp  Game.h  ITransform.h  LightData.h  Map.cpp  Map.h  MapRenderer.cpp  MapRenderer.h  Tools.h  Types.h  World.cpp  World.h
Source/Game/Components/: Animator.h  Component.h  Entity.h  ITransform.h  Rigidbody.cpp  Rigidbody.h
Source/Game/Control/: Camera.h
Source/Game/ECS/: Animator.cpp  Animator.h  Component.h  Entity.h  IUpdatable.cpp  IUpdatable.h  Player.cpp  Player.h  Rigidbody.cpp  Rigidbody.h
Source/Game/Entities/: Camera.h  Character.cpp  Character.h
Source/Game/Items/: Block.cpp  Block.h  Empty.h  GameState.cpp  GameState.h  Item.h  Tool.h  Wall.cpp  Wall.h
Source/Game/Physics/: Collider.cpp  Collider.h
Source/Game/World/: World.h
Source/Gpu/: ChunkFbo.h  ColorFbo.cpp  ColorFbo.h  Framebuffer.cpp  Framebuffer.h  GpuEntity.cpp  GpuEntity.h  GraphicsContext.h  LightFbo.cpp  LightFbo.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vao.cpp  Vao.h  Vertex.h  VertexBufferLayout.h
Source/Math/: Math.h  Primitive.h
Source/Maths/: Maths.h
Source/Menu/: MainMenu.cpp
Source/Pch/: Build.h  Class.h  Compiler.h  Console.h  Function.h  GPU.h  Instrumentor.h  Log.h  Pch.h  Platform.h  Void.h
Source/Renderer/: ChunkFbo.h  ColorFbo.cpp  ColorFbo.h  ColorPass.cpp  ColorPass.h  CompositionPass.cpp  CompositionPass.h  DebugRenderer.cpp  DebugRenderer.h  LightFbo.cpp  LightFbo.h  LightPass.cpp  LightPass.h  MapRenderer.cpp  MapRenderer.h  RenderPass.h  Renderer.h  Tiles.h  Vertex.h  WorldRenderer.cpp  WorldRenderer.h
Source/Renderer/Atlas/: TextureAtlas.cpp  TileMap.h
Source/Renderer/Characters/: CharacterRenderer.cpp  CharacterRenderer.h
Source/Renderer/ColorPass/: ColorFBO.h  ColorPass.cpp  ColorPass.h
Source/Renderer/CompositionPass/: CompositionPass.cpp  CompositionPass.h
Source/Renderer/Entities/: RectVao.h  Sprite.cpp  Sprite.h
Source/Renderer/Interface/: InterfaceRenderer.cpp  InterfaceRenderer.h
Source/Renderer/LightPass/: LightFBO.h  LightPass.cpp  LightPass.h
Source/Renderer/Terrain/: Chunk.cpp  Chunk.h  ColorPass.cpp  ColorPass.h  CompositionPass.cpp  CompositionPass.h  LightPass.cpp  LightPass.h  MapRenderer.cpp  MapRenderer.h
Source/Renderer/World/: WorldRenderer.cpp  WorldRenderer.h
Source/Scene/: Sprite.h
Source/Util/: ImGuiHelper.h  Memory.h  Structures.h  Types.h  Vector.h
assets/Shaders/Characters/: Default.fs
assets/shaders/sky/: sky.fs  sky.vs
assets/shaders/terrain/: color_pass_shader.fs  color_pass_shader.vs  composition_shader.fs  light_pass_shader.vs
assets/shaders/woods/: vs_woods.glsl
src/: Main.cpp  main.cpp
src/Assets/: ImageAsset.cpp  TextAsset.cpp  TextAsset.h
src/Core/: Engine.h  Gui.cpp  Window.cpp
src/Core/Input/: Buttons.h  Input.cpp
src/Core/Themes/: Theme1.h
src/Game/: Game.cpp  Tools.h
src/Game/ECS/: Component.h  Entity.h  Rigidbody.cpp
src/Game/Entities/: Camera.cpp  Character.h
src/Game/Items/: Block.cpp  Empty.cpp  GameState.h  Item.cpp  Tool.cpp  Wall.cpp
src/Game/World/: World.cpp  World.h
src/Menu/: MainMenu.cpp  MainMenu.h
src/Pch/: Console.h  Event.h  Function.h  GPU.h  Platform.h
src/Renderer/Atlas/: TextureAtlas.h  TileMap.h
src/Renderer/Characters/: CharacterRenderer.cpp  CharacterRenderer.h
src/Renderer/Interface/: InterfaceRenderer.h
src/Renderer/World/: WorldRenderer.cpp
src/Util/: ImGuiHelper.h
src/assets/: asset.h  image_asset.cpp  image_asset.h  text_asset.cpp  text_asset.h
src/core/: engine.cpp  engine.h  gui.cpp  gui.h  time.cpp  time.h  window.cpp  window.h
src/core/input/: buttons.h  input.cpp  input.h  keys.h  state.h
src/game/: game.cpp  game.h  tools.h
src/game/ecs/: animator.cpp  animator.h  component.h  entity.h  itransform.h  iupdatable.cpp  iupdatable.h  player.cpp  player.h  rigidbody.cpp  rigidbody.h
src/interface/: console.cpp  console.h  interface_icon_type.h
src/maths/: maths.h  primitive.h
src/menu/: main_menu.cpp  main_menu.h
src/pch/: build.h  class.h  compiler.h  console.h  event.h  function.h  gpu.h  instrumentor.h  log.h  pch.h  platform.h  void.h
src/renderer/: renderer.h  vertex.h
src/util/: imgui_helper.h  memory.h  structures.h  types.h  vector.h
(+115 files in other folders)
